fix: Removed spacing below svg container for TrustElements

--- a/packages/marketing-components/src/trustelements/TrustElement/TrustElement.less
+++ b/packages/marketing-components/src/trustelements/TrustElement/TrustElement.less
@@ -13,6 +13,7 @@
   max-width: 80px;
   object-fit: contain;
   display: inline-block;
+  vertical-align: top;
 }
 .tw-trust-element .link-callout {
   text-decoration: none;
